bci-deployments/mvp-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: bci
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
